--- a/css/get-involved.css
+++ b/css/get-involved.css
@@ -19,7 +19,7 @@
 
 .cta--get-involved {
   align-self: center;
-  margin: 20px;
+  margin:0 20px 48px 20px;
   align-self: center;
 }
 
@@ -65,7 +65,7 @@
 
   .wrapper__div--volunteer {
     flex-direction: row;
-    
+
     justify-content: space-between;
   }
 
@@ -86,7 +86,8 @@
     margin-right: 20px;
   }
 
-  .h2--internships {
+  .h2--internships,
+  .get-involved__h2--volunteer {
     margin-top: 20px;
   }
 }
