--- a/css/global.css
+++ b/css/global.css
@@ -80,7 +80,7 @@ ul {
 
 .cta {
   text-decoration: none;
-  padding: 10px 15px;
+  padding: 10px 35px;
   border-radius: 20px;
   background-color: var(--secondary-color);
   color: black;
