--- a/css/visit.css
+++ b/css/visit.css
@@ -8,6 +8,8 @@ p {
   height: 250px;
 }
 
+
+
 .section__div--visit,
 .section--location {
   display: flex;
@@ -20,8 +22,8 @@ p {
 }
 
 .h1--visit {
-  font-size: 2.5rem;
-  margin: auto;
+  font-size: 1.5rem;
+  margin-bottom:20px;
 }
 
 .image--visit--30percent {
@@ -77,7 +79,8 @@ p {
   }
 
   .h1--visit {
-    flex: 0;
+    font-size: 2.5rem;
+    margin:auto;
   }
 
   .visit__ul--hours {
